fixed page 10 and page 11 spacing and font size

--- a/scss/pages/page10.scss
+++ b/scss/pages/page10.scss
@@ -7,17 +7,18 @@
     width: 30%;
     bottom: 0;
     background: $mint;
-    padding: 100px 80px;
+    padding: 80px 50px;
 
     h1 {
       color: white;
-      font-size: 30px;
+      font-size: 26px;
       line-height: 1.5;
     }
     p {
       font-weight: 500;
       line-height: 1.5;
       margin: 0;
+      font-size: 12px;
     }
   }
   &__image {
