--- a/scss/pages/page11.scss
+++ b/scss/pages/page11.scss
@@ -1,8 +1,10 @@
 .page-11 {
+  .page--main--header--light {
+    font-size: 22px;
+  }
   .exhibit-e {
-    margin-top: 50px;
+    margin-top: 20px;
     &__main {
-      margin-top: 20px;
       display: flex;
       align-items: center;
     }
@@ -21,6 +23,7 @@
       width: 40%;
       padding: 20px;
       height: 100%;
+      font-size: 12px;
       p {
         margin: 0;
       }
@@ -28,12 +31,12 @@
   }
   .exhibit-f {
     &__main {
-      margin-top: 80px;
-      padding-bottom: 30px;
+      margin-top: 30px;
+      padding-bottom: 10px;
       &__content {
         width: 80%;
-        margin: 50px auto;
-        font-size: 16px;
+        margin: 20px auto;
+        font-size: 12px;
       }
       &__row {
         width: 80%;
@@ -56,7 +59,7 @@
         }
         p {
           margin: 0;
-          font-size: 14px;
+          font-size: 10px;
         }
       }
     }
