--- a/scss/pages/page9.scss
+++ b/scss/pages/page9.scss
@@ -1,7 +1,7 @@
 .page-9 {
   position: relative;
   .page--main-header {
-    font-size: 28px;
+    font-size: 24px;
     margin-top: 50px;
   }
   ul {
